--- a/finances.Rmd
+++ b/finances.Rmd
@@ -23,7 +23,7 @@ source("passwords.R")
 ```{r orders, include=FALSE}
 pma_token <- pma_login(pma_user, pma_pass)
 tax_exempt_users <- c("saramolton16@gmail.com", "bonaishalom")
-orders <- get_orders(overwrite = FALSE, token = pma_token) %>%
+orders <- get_orders(overwrite = TRUE, token = pma_token) %>%
   dplyr::mutate(
     tax_exempt = user_id %in% tax_exempt_users,
     markup = sales - price_paid
@@ -35,7 +35,7 @@ orders <- get_orders(overwrite = FALSE, token = pma_token) %>%
 orders %>%
   select(foodclub, order_date, account_id, user_id, price_paid, tax_paid, collected, sales, tax, food, tax_exempt) %>%
   arrange(order_date, account_id, user_id) %>%
-  filter(order_date > as.Date("2017-09-15")) %>%
+  filter(order_date >= as.Date("2017-02-08")) %>%
   write.table("new_orders.tsv", quote = FALSE, na = "", sep = "\t", row.names = FALSE, col.names = FALSE)
 ```
 
