Update product categories

--- a/finances.Rmd
+++ b/finances.Rmd
@@ -191,25 +191,35 @@ codes <- list(
   # Nuts
   "Peanut butter (organic)" = c("pnbc[0-9]+", "peanut_butter"),
   "Peanuts (organic)" = c("pntr[0-9]+", "pntb[0-9]+"),
-  "Cashews (organic)" = c("casw[0-9]+", "casp[0-9]+", "caswl[0-9]+", "61211", "61217", "61214"),
+  # "Cashews (organic)" = c("casw[0-9]+", "casp[0-9]+", "caswl[0-9]+", "61211", "61217", "61214"),
+  "Cashews: whole (organic)" = c("casw[0-9]+", "caswl[0-9]+", "61211", "61217", "61214"),
+  "Cashews: pieces (organic)" = c("casp[0-9]+"),
+  "Cashews: pieces" = c("cashews"),
   "Almonds" = c("almonds"),
   "Almonds (organic)" = c("almn[0-9]+", "alms[0-9]+", "organic_almonds", "60203", "60204", "60206", "60202"),
   "Walnuts (organic)" = c("waln[0-9]+", "walp[0-9]+"),
+  "Pecans (organic)" = c("peca[0-9]+", "pecp[0-9]+"),
+  "Pecans" = c("pecans"),
   "Sunflower seeds (organic)" = c("sprs[0-9]+", "sund[0-9]+", "sund[0-9]+", "sunh[0-9]+"),
   "Pumpkin seeds (organic)" = c("puAA[0-9\\.]+"),
   "Flax seeds (organic)" = c("brof[0-9]+", "golf[0-9]+", "563"),
+  "Sesame seeds: hulled (organic)" = c("sesh25"),
   # Beans, Cereals, Rice
   "Black beans (organic)" = c("blb[0-9]+"),
   "Pinto beans (organic)" = c("pinb[0-9]+"),
   "Garbanzo beans (organic)" = c("garm[0-9]+", "gars[0-9]+"),
+  "Kidney beans (organic)" = c("kidb[0-9]+"),
   "Red lentils (organic)" = c("rdld[0-9]+", "rdln[0-9]+"),
   "Green lentils (organic)" = c("frgl[0-9]+", "grel[0-9]+"),
-  "White rice (organic)" = c("riwbn[0-9]+", "riar[0-9]+", "ribw[0-9]+", "risu[0-9]+", "riwj[0-9]+", "riwl[0-9]+", "masoori_rice"),
-  "Brown rice (organic)" = c("risg[0-9]+", "rilgn[0-9]+", "risgn[0-9]+", "ribb[0-9]+", "ribm[0-9]+", "rijb[0-9]+", "rilb[0-9]+", "risw[0-9]+", "brown_rice"),
+  "Rice (organic)" = c("riwbn[0-9]+", "riar[0-9]+", "ribw[0-9]+", "risu[0-9]+", "riwj[0-9]+", "riwl[0-9]+", "masoori_rice", "risg[0-9]+", "rilgn[0-9]+", "risgn[0-9]+", "ribb[0-9]+", "ribm[0-9]+", "rijb[0-9]+", "rilb[0-9]+", "risw[0-9]+", "brown_rice"),
+  # "White rice (organic)" = c("riwbn[0-9]+", "riar[0-9]+", "ribw[0-9]+", "risu[0-9]+", "riwj[0-9]+", "riwl[0-9]+", "masoori_rice"),
+  # "Brown rice (organic)" = c("risg[0-9]+", "rilgn[0-9]+", "risgn[0-9]+", "ribb[0-9]+", "ribm[0-9]+", "rijb[0-9]+", "rilb[0-9]+", "risw[0-9]+", "brown_rice"),
   "Polenta (organic)" = c("pole[0-9]+"),
-  "Corn kernels (organic)" = c("popc[0-9]+", "popm[0-9]+", "popw[0-9]+"),
+  "Popcorn (organic)" = c("popc[0-9]+", "popm[0-9]+", "popw[0-9]+"),
   "Rolled oats (organic)" = c("oati[0-9]+", "quik[0-9]+", "quro[0-9]+", "rego[0-9]+", "rero[0-9]+", "tcut[0-9]+", "thro[0-9]+"),
+  "Steel cut oats (organic)" = c("stco[0-9]+"),
   "Quinoa (organic)" = c("quin[0-9]+", "quir[0-9]+", "quit[0-9]+", "quib[0-9]+"),
+  "Buckwheat (organic)" = c("bucw[0-9]+"),
   # Flours
   "White wheat flour (organic)" = c("apf[0-9]+", "uapf[0-9]+"),
   "Whole wheat flour (organic)" = c("whlwf[0-9]+", "whwpfl[0-9]+"),
@@ -227,7 +237,7 @@ codes <- list(
   "Dates (organic)" = c("dapt[0-9]+", "datm[0-9]+", "deglet_dates"),
   "Dried apples (organic)" = c("apdi[0-9]+", "apri[0-9]+"),
   "Dried apricots (organic)" = c("apr[0-9]+", "dried_apricots", "61255"),
-  "Dried grapes (organic)" = c("raif[0-9]+", "rais[0-9]+", "raist[0-9]+", "raisu[0-9]+", "raig[0-9]+", "raim[0-9]+"),
+  "Raisins (organic)" = c("raif[0-9]+", "rais[0-9]+", "raist[0-9]+", "raisu[0-9]+", "raig[0-9]+", "raim[0-9]+"),
   "Dried figs (organic)" = c("fibm[0-9]+", "fig[0-9]+", "figo[0-9]+", "dried_figs"),
   "Dried mangos (organic)" = c("mang[0-9]+", "dried_mangoes_organic", "61253"),
   "Lemon juice (organic)" = c("lemon_juice"),
@@ -247,8 +257,35 @@ codes <- list(
       dplyr::filter(account_id == "bcf_equalexchange", grepl("Espresso|Roast", description, ignore.case = TRUE)) %$%
       code
   ),
+  # Baking
+  "Baking powder" = c("2313"),
   # Spices
   "Salt" = c("salrm[0-9]+", "sare[0-9]+", "saresh", "sarf[0-9]+"),
+  "Nutritional yeast" = c("2326", "2328", "2388"),
+  "Smoked paprika (organic)" = c("4873"),
+  "Smoked paprika" = c("4426"),
+  "Garlic powder (organic)" = c("352"),
+  "Garlic poweder" = c("149"),
+  "Garlic granules (organic)" = c("2524"),
+  "Onion powder (organic)" = c("371"),
+  "Oregano (organic)" = c("281"),
+  "Oregano" = c("173", "175"),
+  "Thyme (organic)" = c("378"),
+  "Ceylon cinnamon: powder (organic, fair trade)" = c("7006"),
+  "Lavender (organic)" = c("1310"),
+  "Cumin seeds (organic)" = c("2591"),
+  "Black peppercorns (organic)" = c("2603", "7003", "2955"),
+  "Black peppercorns" = c("183", "248"),
+  "Nutmeg: ground (organic)" = c("2607"),
+  "Ginger root: powder (organic)" = c("7010", "2610"),
+  "Ginger root: powder" = c("370"),
+  # Teas
+  "Earl grey black tea" = c("1006"),
+  "Earl grey black tea (organic)" = c("2826"),
+  "Jasmine green tea (organic)" = c("1011"),
+  "Rooibos tea (organic, fair trade)" = c("2828"),
+  "English breakfast tea (organic)" = c("1078"),
+  "English breakfast tea" = c("1007"),
   # House & Body
   "Toilet paper (recycled)" = c("tp"),
   "Paper towels (recycled)" = c("paper_towels"),
